make robots.txt dynamic

--- a/.env
+++ b/.env
@@ -21,3 +21,4 @@ PUBSUBHUBBUB_CALLBACK_URL=http://example.com
 FEATURES=cla,join_ccla,tools,fieri,announcement,github
 FIERI_URL=http://example.com
 FIERI_KEY=YOUR_FIERI_KEY
+ROBOTS_ALLOW=/
