add private flag

--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ FEATURES=cla,join_ccla,tools,fieri,announcement,github
 FIERI_URL=http://example.com
 FIERI_KEY=YOUR_FIERI_KEY
 ROBOTS_ALLOW=/
+ENFORCE_PRIVACY=true
