updating vcr cassettes

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ FROM_EMAIL=donotreply@example.com
 HOST=localhost
 PORT=3000
 PROTOCOL=http
-CURRY_CLA_LOCATION=https://community.getchef.com
+CURRY_CLA_LOCATION=https://community.chef.io
 CURRY_SUCCESS_LABEL="Signed CLA"
 PUBSUBHUBBUB_SECRET=YOUR_PUBSUBHUBBUB_SECRET
 NEW_RELIC_APP_NAME=Supermarket
