--- a/spec/vcr_cassettes/cla_validation_worker_missing_repo.yml
+++ b/spec/vcr_cassettes/cla_validation_worker_missing_repo.yml
@@ -10,7 +10,9 @@ http_interactions:
       Accept:
       - application/vnd.github.v3+json
       User-Agent:
-      - Octokit Ruby Gem 3.2.0
+      - Octokit Ruby Gem 3.3.1
+      Content-Type:
+      - application/json
       Authorization:
       - token <TOKEN>
       Accept-Encoding:
@@ -23,7 +25,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 28 Jul 2014 20:37:21 GMT
+      - Tue, 02 Dec 2014 19:30:32 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -33,9 +35,9 @@ http_interactions:
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4929'
+      - '4838'
       X-Ratelimit-Reset:
-      - '1406580371'
+      - '1417549862'
       X-Oauth-Scopes:
       - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
@@ -54,16 +56,16 @@ http_interactions:
       - ETag, Link, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset,
         X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       X-Github-Request-Id:
-      - 18C45CB0:7B30:759D081:53D6B481
+      - 180A5027:6D6C:446C255:547E1358
       Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
     body:
       encoding: UTF-8
       string: '{"message":"Not Found","documentation_url":"https://developer.github.com/v3"}'
     http_version: 
-  recorded_at: Mon, 28 Jul 2014 20:37:24 GMT
+  recorded_at: Tue, 02 Dec 2014 19:30:32 GMT
 recorded_with: VCR 2.9.2
