--- a/spec/vcr_cassettes/curry_repository_subscriber.yml
+++ b/spec/vcr_cassettes/curry_repository_subscriber.yml
@@ -5,71 +5,10 @@ http_interactions:
     uri: https://api.github.com/hub
     body:
       encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.0.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - '*/*'
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Mon, 14 Apr 2014 15:22:06 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4962'
-      X-Ratelimit-Reset:
-      - '1397491776'
-      X-Oauth-Scopes:
-      - public_repo
-      X-Accepted-Oauth-Scopes:
-      - ''
-      X-Github-Media-Type:
-      - github.beta
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      X-Github-Request-Id:
-      - 6153E20C:2052:33ABC50:534BFD1E
-      Strict-Transport-Security:
-      - max-age=31536000
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - c436b2b44345c72ff906059f604991e7
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:06 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
       string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fnot_paprika%2Fevents%2Fpull_request
     headers:
       User-Agent:
-      - Octokit Ruby Gem 3.0.0
+      - Octokit Ruby Gem 3.3.1
       Authorization:
       - token <TOKEN>
       Content-Type:
@@ -77,7 +16,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - '*/*'
+      - "*/*"
   response:
     status:
       code: 422
@@ -86,7 +25,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Apr 2014 15:22:07 GMT
+      - Tue, 02 Dec 2014 19:24:13 GMT
       Content-Type:
       - application/json; charset=utf-8
       Status:
@@ -94,15 +33,15 @@ http_interactions:
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4959'
+      - '4853'
       X-Ratelimit-Reset:
-      - '1397491776'
+      - '1417549862'
       X-Oauth-Scopes:
-      - public_repo
+      - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
-      - ''
+      - repo
       X-Github-Media-Type:
-      - github.beta
+      - github.v3
       X-Xss-Protection:
       - 1; mode=block
       X-Frame-Options:
@@ -112,14 +51,75 @@ http_interactions:
       Content-Length:
       - '195'
       X-Github-Request-Id:
-      - 6153E20C:2054:66432AF:534BFD1F
+      - 180A5027:15D2:EC8FAC:547E11DD
       Strict-Transport-Security:
-      - max-age=31536000
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
     body:
       encoding: UTF-8
       string: '{"message":"No repository found for hub.topic: \"https://github.com/gofullstack/not_paprika/events/pull_request\"","documentation_url":"https://developer.github.com/v3/repos/hooks/#pubsubhubbub"}'
     http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:07 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Tue, 02 Dec 2014 19:24:13 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.3.1
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Tue, 02 Dec 2014 19:24:15 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4850'
+      X-Ratelimit-Reset:
+      - '1417549862'
+      X-Oauth-Scopes:
+      - public_repo, write:repo_hook
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      X-Github-Request-Id:
+      - 180A5027:15D7:8A470FB:547E11DF
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - 2811da37fbdda4367181b328b22b2499
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Tue, 02 Dec 2014 19:24:15 GMT
+recorded_with: VCR 2.9.2
