--- a/spec/vcr_cassettes/curry_repository_unsubscriber.yml
+++ b/spec/vcr_cassettes/curry_repository_unsubscriber.yml
@@ -10,7 +10,9 @@ http_interactions:
       Accept:
       - application/vnd.github.v3+json
       User-Agent:
-      - Octokit Ruby Gem 3.0.0
+      - Octokit Ruby Gem 3.3.1
+      Content-Type:
+      - application/json
       Authorization:
       - token <TOKEN>
       Accept-Encoding:
@@ -23,7 +25,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Apr 2014 15:22:08 GMT
+      - Tue, 02 Dec 2014 19:24:07 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -33,15 +35,15 @@ http_interactions:
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4955'
+      - '4865'
       X-Ratelimit-Reset:
-      - '1397491776'
+      - '1417549862'
       Cache-Control:
       - private, max-age=60, s-maxage=60
       Etag:
-      - '"74dd08311d038ba6c9b2635087107635"'
+      - '"4b8e6b9a1a6f4e9712047100a9dd48bc"'
       X-Oauth-Scopes:
-      - public_repo
+      - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
       - admin:repo_hook, public_repo, read:repo_hook, repo, write:repo_hook
       Vary:
@@ -61,20 +63,21 @@ http_interactions:
       - ETag, Link, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset,
         X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       X-Github-Request-Id:
-      - 6153E20C:2050:D9044B:534BFD20
+      - 180A5027:15D3:1D14A6E:547E11D7
       Strict-Transport-Security:
-      - max-age=31536000
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
       X-Served-By:
-      - d818ddef80f4c7d10683dd483558952a
+      - 474556b853193c38f1b14328ce2d1b7d
     body:
       encoding: UTF-8
-      string: '[{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2098271","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2098271/test","id":2098271,"name":"web","active":true,"events":["pull_request"],"config":{"url":"<PUBSUBHUBBUB_CALLBACK>","secret":"<PUBSUBHUBBUB_SECRET>","content_type":"form"},"last_response":{"code":null,"status":"unused","message":null},"updated_at":"2014-04-14T15:22:08Z","created_at":"2014-04-14T15:22:08Z"}]'
+      string: '[{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2114452","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2114452/test","id":2114452,"name":"tenxer","active":true,"events":["push"],"config":{"api_key":""},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2014-08-20T14:43:04Z","created_at":"2014-04-17T16:31:58Z"},{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2446779","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2446779/test","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2014-12-02T18:56:46Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2558273","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2558273/test","id":2558273,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://supermarket-staging.getchef.com/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
+        HTTP Response: 301"},"updated_at":"2014-12-02T18:56:46Z","created_at":"2014-07-08T18:46:22Z"},{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/3582097","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/3582097/test","id":3582097,"name":"web","active":true,"events":["pull_request"],"config":{"url":"<PUBSUBHUBBUB_CALLBACK>","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2014-12-02T18:56:46Z","created_at":"2014-12-02T18:51:52Z"}]'
     http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:08 GMT
+  recorded_at: Tue, 02 Dec 2014 19:24:07 GMT
 - request:
     method: get
     uri: https://api.github.com/repos/gofullstack/paprika/hooks
@@ -85,7 +88,9 @@ http_interactions:
       Accept:
       - application/vnd.github.v3+json
       User-Agent:
-      - Octokit Ruby Gem 3.0.0
+      - Octokit Ruby Gem 3.3.1
+      Content-Type:
+      - application/json
       Authorization:
       - token <TOKEN>
       Accept-Encoding:
@@ -98,23 +103,25 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Apr 2014 15:22:09 GMT
+      - Tue, 02 Dec 2014 19:24:08 GMT
       Content-Type:
       - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
       Status:
       - 200 OK
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4953'
+      - '4863'
       X-Ratelimit-Reset:
-      - '1397491776'
+      - '1417549862'
       Cache-Control:
       - private, max-age=60, s-maxage=60
       Etag:
-      - '"9207e113ddcd20a9ac22319a53c77615"'
+      - '"3ac2534ae3500eb77f2a98fba5345839"'
       X-Oauth-Scopes:
-      - public_repo
+      - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
       - admin:repo_hook, public_repo, read:repo_hook, repo, write:repo_hook
       Vary:
@@ -128,28 +135,88 @@ http_interactions:
       - deny
       Content-Security-Policy:
       - default-src 'none'
-      Content-Length:
-      - '2'
       Access-Control-Allow-Credentials:
       - 'true'
       Access-Control-Expose-Headers:
       - ETag, Link, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset,
         X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       X-Github-Request-Id:
-      - 6153E20C:2054:6643571:534BFD21
+      - 180A5027:15D7:8A4641A:547E11D8
       Strict-Transport-Security:
-      - max-age=31536000
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
       X-Served-By:
-      - c436b2b44345c72ff906059f604991e7
+      - 2811da37fbdda4367181b328b22b2499
     body:
       encoding: UTF-8
-      string: '[]'
+      string: '[{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2114452","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2114452/test","id":2114452,"name":"tenxer","active":true,"events":["push"],"config":{"api_key":""},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2014-08-20T14:43:04Z","created_at":"2014-04-17T16:31:58Z"},{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2446779","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2446779/test","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2014-12-02T18:56:46Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/gofullstack/paprika/hooks/2558273","test_url":"https://api.github.com/repos/gofullstack/paprika/hooks/2558273/test","id":2558273,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://supermarket-staging.getchef.com/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
+        HTTP Response: 301"},"updated_at":"2014-12-02T18:56:46Z","created_at":"2014-07-08T18:46:22Z"}]'
     http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:09 GMT
+  recorded_at: Tue, 02 Dec 2014 19:24:08 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=unsubscribe&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.3.1
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Tue, 02 Dec 2014 19:24:10 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4858'
+      X-Ratelimit-Reset:
+      - '1417549862'
+      X-Oauth-Scopes:
+      - public_repo, write:repo_hook
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      X-Github-Request-Id:
+      - 180A5027:15D7:8A468C1:547E11DA
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - 065b43cd9674091fec48a221b420fbb3
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Tue, 02 Dec 2014 19:24:11 GMT
 - request:
     method: post
     uri: https://api.github.com/hub
@@ -158,7 +225,7 @@ http_interactions:
       string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
     headers:
       User-Agent:
-      - Octokit Ruby Gem 3.0.0
+      - Octokit Ruby Gem 3.3.1
       Authorization:
       - token <TOKEN>
       Content-Type:
@@ -166,7 +233,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - '*/*'
+      - "*/*"
   response:
     status:
       code: 204
@@ -175,21 +242,21 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Apr 2014 15:22:10 GMT
+      - Tue, 02 Dec 2014 19:24:11 GMT
       Status:
       - 204 No Content
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4950'
+      - '4857'
       X-Ratelimit-Reset:
-      - '1397491776'
+      - '1417549862'
       X-Oauth-Scopes:
-      - public_repo
+      - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
-      - ''
+      - admin:repo_hook, write:repo_hook
       X-Github-Media-Type:
-      - github.beta
+      - github.v3
       X-Xss-Protection:
       - 1; mode=block
       X-Frame-Options:
@@ -197,20 +264,20 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - 6153E20C:2054:66436CF:534BFD22
+      - 180A5027:15D3:1D14E33:547E11DB
       Strict-Transport-Security:
-      - max-age=31536000
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
       Vary:
       - Accept-Encoding
       X-Served-By:
-      - c046d59f93ede9ab52d5ac29f1ed70f7
+      - 173530fed4bbeb1e264b2ed22e8b5c20
     body:
       encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:10 GMT
+  recorded_at: Tue, 02 Dec 2014 19:24:11 GMT
 - request:
     method: post
     uri: https://api.github.com/hub
@@ -219,7 +286,7 @@ http_interactions:
       string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=unsubscribe&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
     headers:
       User-Agent:
-      - Octokit Ruby Gem 3.0.0
+      - Octokit Ruby Gem 3.3.1
       Authorization:
       - token <TOKEN>
       Content-Type:
@@ -227,7 +294,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - '*/*'
+      - "*/*"
   response:
     status:
       code: 204
@@ -236,21 +303,21 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Apr 2014 15:22:10 GMT
+      - Tue, 02 Dec 2014 19:24:11 GMT
       Status:
       - 204 No Content
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4949'
+      - '4856'
       X-Ratelimit-Reset:
-      - '1397491776'
+      - '1417549862'
       X-Oauth-Scopes:
-      - public_repo
+      - public_repo, write:repo_hook
       X-Accepted-Oauth-Scopes:
-      - ''
+      - admin:repo_hook, write:repo_hook
       X-Github-Media-Type:
-      - github.beta
+      - github.v3
       X-Xss-Protection:
       - 1; mode=block
       X-Frame-Options:
@@ -258,79 +325,18 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - 6153E20C:2055:14C4871:534BFD22
+      - 180A5027:15D8:9E29DC9:547E11DB
       Strict-Transport-Security:
-      - max-age=31536000
+      - max-age=31536000; includeSubdomains; preload
       X-Content-Type-Options:
       - nosniff
       Vary:
       - Accept-Encoding
       X-Served-By:
-      - 3061975e1f37121b3751604ad153c687
+      - 173530fed4bbeb1e264b2ed22e8b5c20
     body:
       encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:10 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBBUB_CALLBACK>&hub.mode=unsubscribe&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.0.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - '*/*'
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Mon, 14 Apr 2014 15:22:10 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4948'
-      X-Ratelimit-Reset:
-      - '1397491776'
-      X-Oauth-Scopes:
-      - public_repo
-      X-Accepted-Oauth-Scopes:
-      - ''
-      X-Github-Media-Type:
-      - github.beta
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      X-Github-Request-Id:
-      - 6153E20C:2050:D904FB:534BFD22
-      Strict-Transport-Security:
-      - max-age=31536000
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - a8d8e492d6966f0c23dee2eed64c678a
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Mon, 14 Apr 2014 15:22:10 GMT
-recorded_with: VCR 2.9.0
+  recorded_at: Tue, 02 Dec 2014 19:24:12 GMT
+recorded_with: VCR 2.9.2
